# mc-launchermeta

./: .gitignore  Cargo.toml  README.md
src/: asset_index.rs  lib.rs  version_manifest.rs
src/version/: library.rs  logging.rs  mod.rs  rule.rs
tests/: crawl_versions.rs
