[package]
name = "mc-metadata"
version = "0.1.0"
edition = "2021"
rust-version = "1.56.0"
description = "A crate providing types for the Minecraft Launcher Metadata API"
authors = ["actioninja"]
license = "MPL-2.0"
categories = ["api-bindings", "game-development"]
keywords = ["minecraft", "launcher", "metadata", "api", "json"]
include = ["src/**", "Cargo.toml", "README.md", "LICENSE.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http-client = { version = "6.5", optional = true }

[dev-dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
